--- a/ansible/inventory/host_vars/dnode1.sops.yaml
+++ b/ansible/inventory/host_vars/dnode1.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:QEIYp/hd,iv:XBXwsOM4VgXLmHbxLJuRaT0r2AItf1GI7TZmyI0Y3+s=,tag:qzZKKcv7yR/bMOoH0QOy7g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:o/WyEKj6,iv:BfCdNy5LQIa0Ia1fBoeiX/Er7xzEJeqNw3LN62JE5Mo=,tag:/E+YqmFVQar192IGYQiHjw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age1l9u8jjefsvmsy4887l79u6wqhzg3dw5q8g8ge8jz8mjlea4fcunsqe8fvg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZZkpkaXBQMlRLZGFQa2hZ
-            ZnJ0VTFscjYwYlc0MVlabU00S2ZyQlJ0M25BCnZGTTR5bXB4WGVwNVhNdHdZKzZR
-            V2Nsa1hkWG9PVEVBUGxWZ3hDeWh1VGMKLS0tIFFFNk9yY2srRkczVEtndnNDZmsw
-            UThQa05GTzJmQXRnSkxGSitvcE1uYmsKba3kBlBRKl6oFxUfKa5iyPeVCiu206W5
-            fN67rno9Zg+5PWv+toYzWmyCEIvj82VonmFVWFt7XaP/VHubmPZlpQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByckIwYVFUWU8xMS9tQTNE
+            NFNwR05EaHg0cFRtaFprWVdTQ2xYMTQyMHp3CjVkTElueGJuWlFUTnQ0SjFPcXB5
+            MzNIUUVHYXhKYTNsOS9HVTU2bmdDT2MKLS0tIHFpUzVGWjFNa1JQK2xCWmdKK3or
+            QzhpZlpCYXFLYWJRbEZXQ2x0SEs0M1UKB7oMpUs35LZdk0OW1BBS7GRN3NtczxA1
+            KfHTZ60wA0g9LyOMbZE7X7q7+aTcFnK2ST4JJvuLhtYlqzCJ240/LQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-30T16:42:29Z"
-    mac: ENC[AES256_GCM,data:wIGBLctUEHzSttkq9weFMhPM2gO/e9xon6WZaypoluWaW+zZ7etG9EsBiJl5Jx1f3cigUW6xM+Q/T5icfnm1px8c/sAlPDcyIv65ujFWhfOxv2pJsdxgJcPfJM9c1Xtiif63PJi5ZNuIvPIrub/BvJLRbxpxijzGEyFGJlpM0Dw=,iv:ocNsGgAEYb89766FP3i8qk4O2U1CsAYyUUVFg1dnToo=,tag:tgZkqlNFzjRO1Q3Z5iTYMw==,type:str]
+    lastmodified: "2023-10-30T20:33:22Z"
+    mac: ENC[AES256_GCM,data:W9o3mI8SxXM1RlLWIkLbp1EJQzqAbCHzehirXWrvzrqmuKAhanE5EcUA9matbP1mncwTlKG4ZSbHtQsgoJZqvLPlXIiRa5JCLayiH5SxLarBW2pO7kPlUrHhK5P7XfP7DbQHWkDf+WUzzM6bIUKcEc9mgVbNzt7YSZRszSorQC4=,iv:mrnuse1jkm9l7vNhL6Y07jxPv+EPemJ9p24/VTOffSA=,tag:zf/NjU3hXlOwDYs9JfvXJw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
