--- a/ansible/inventory/host_vars/dnode2.sops.yaml
+++ b/ansible/inventory/host_vars/dnode2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:onZEIRpH,iv:Bdb5NzqhOrDZ3B5egSGL0xgh+XBZGZt5nSbZ+Z3GGFE=,tag:6F+0p72C4t18zCMdzff4Ww==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:TpqHvJOe,iv:9xcg/9k2qwtVbVi9oizJpp09S2VOaZ9qE8mVqrORYs4=,tag:vZy2xFow01fzMARw7SBI7w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age1l9u8jjefsvmsy4887l79u6wqhzg3dw5q8g8ge8jz8mjlea4fcunsqe8fvg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxYlpEeUM3d2krQWRuclp2
-            NW5kcnBRbVFlTnl3VkNLMzFtMVk4c083Q1JjCkY5N1dLL05XaUVMbFlBR3QxdTlj
-            Nk9RMFc5TDViQk15WW96MzBlUURzaWsKLS0tIEkrTFhjMFllSHluTGFlTm1nRlBl
-            VGRCcXF6dEFKL2tUQXk1YXNlZ0QrTVUKOFV9iRMm/RCnz/DLGUv+Z3H++K2DwnHZ
-            RX0orWZ5iWEM4/x5SLYKDrX6bHKlBxs8qAjiRYBVpvZNFTCmAiLdVg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSaTRKS1Q0ckNkRi93WWli
+            TVBUemFJcXdIUUo4TmNQbkg1MkVKcWtKaWpNCjJ3QktBWnhvTW9lMmxrUGVtRnpY
+            aFpqcnowNVpNTFlienhabEJHdDBDME0KLS0tIFR0QnR1NkhWOUpqZXZBOWMxclA2
+            WUxzcHlYa0d4amxqd2NjdTQ5bWYvZWMKn7SLINCGxUv9OyTI6TnSVdevANdK9Lxj
+            jscYwYaNTgtxDsdb0eOrmhEMB7b5RMIsEE2EnXXGmMbUlTjrLSw5Qg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-30T16:42:29Z"
-    mac: ENC[AES256_GCM,data:SVcqKVdqbDEdQdy6kubqXaV2ImnsXQf1wTc8pbTCXH4gkNtn4J1tBBGJYQU8ijiU/CG7oJ1m0o3Jnu+1OmqaCWvz3lYwLmiOQnF6NOEdiy6rLhgtXTWPDT8nkJXVdiNEUzJOFFAUti4HVq3pLJCLG585pi2mVEkl33NAPPl12RM=,iv:EWYYI2MyVYKSqEi0Vf9rkLWsSd8/ieQW7lzLlFtAqfI=,tag:iy8u+ITIJoMsp4hY1mFsOQ==,type:str]
+    lastmodified: "2023-10-30T20:33:23Z"
+    mac: ENC[AES256_GCM,data:xR7OCrWhh7RasWeX3SLReIfosBNq3L/vNVZSOs4GDBQvKl9pnZG2H1vmJEbwaEsowZ7zzPefeW+Fe44WiI2ZsVm4ePZr6FpS94OJrur6bMgYi5Ww4wMQ6RRRl7aLfoEwXRndds9/JqZ/htFv6YNCyHFquvTUV/glufrgBrU44/4=,iv:hbXpVLui0vWxY3DoPC3X0RNCApz4ZM0k3kQunfybA2s=,tag:TYbischAtfkzxnqDrIswbA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
