--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:CnbHonLOkxZ9z3p3,iv:PCWHq2UAKbavuF9Qj5mhDrB90wLkixGLVDCKseqJlww=,tag:/I51UcEmzMvaCYvzG+uT0g==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:bhMOdOLi5OjiwiuF,iv:lb4JMJ9P2pbvtxZ9p0kMB7ZCh9qcBKm8OVLgdm3Oxbc=,tag:jwASjk6pmdCUZ3XwxAP6Sw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age1l9u8jjefsvmsy4887l79u6wqhzg3dw5q8g8ge8jz8mjlea4fcunsqe8fvg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQVXhyS1lBSFh5dzlRLzFP
-            TXZwMGxtVkdBd1RlMis3bzR1aWpqNEpFdTJVCitrWjJFVXMyY3lORDM3bmJpSWRp
-            Z0tKVEZsT1VRS3dKdVNGcWZobHpYK3cKLS0tIGtieS9jMWFGd1pKeVdBZGlMQ2o3
-            SVloZU5ZdG9FWnk1TktCTEYzWlJSRmcK98Ko4BfAateOR5+EltEIeivx1bDI1lTo
-            8spA6XPr7RxZJz8xNb7Pa/p9CVG0+kHQvYcn45oINI0/2cjUKA8d7w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLV2VTMUZQZ25RbWlZeGZI
+            OTZjWjBldFBSejRHYVR0b3M5UmdkSnFDSXdZCjhiUmlCOVlqQXhOY0tMN3UrNFZ1
+            dkE0UXFZQTJDUlEvWHJhbkREdHc5OEkKLS0tIGRQQmltVENFOVQxMTdvTGh4dkxs
+            dlM5SG94T1k0M00zdGtmWHVtSVFvckEKUWdkxO/brlY8cy3hK21yks3R+bxto3hj
+            jVK/IY0qBtaZXFE54bA3k6O8SAyiTne4EwrdGNlj0fb1omNrdUqgqg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-30T16:43:30Z"
-    mac: ENC[AES256_GCM,data:ugI25FAfJVqkB9odnx67Pj/zQZGTdQItvOs9iY1kyQu8VUYL1nQqDsadeWCbVF4zWVgaSqMcD/I5lTpsx6YdR7yM6W41MxUrYpkc4SDFja1LPdyYH2L02hJ83zXslRxuhzU4pTWozA+ho24h2Ti6gi/vSerP8RAn0odL4Q9FO4w=,iv:w/xBNkqT/04ySLqAQA1GxIn/LoVlvC3uiwxeFbR3LOw=,tag:fmdUk1u1XlVgIWv0YE6Prw==,type:str]
+    lastmodified: "2023-10-30T20:34:34Z"
+    mac: ENC[AES256_GCM,data:j7Y7cixtZX0G3WubYBLYeglkPux1oMft7cDrwD6kxqt7GScLIUpqTAcs6wX4qlYN3HfZ9LYNkuqCHk+b6AnJpo2CPE5OSNXXLXvfH+0es1nnX0kUVanY9SwIFDCogu3x42H2rUXiTqjDClecFf8kBg/0loDUMLc/pA2Tnd+ejUQ=,iv:AkQa+zhmpUBYkO0UIuUTnrN31fjuOzvkqNzYdEDlgwk=,tag:BIxMsfswSoRuBjFo4fOshg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
