--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:47UA/EuKZ1kNXiZnmiYvCA==,iv:Wayz4PADnvQz4n0GV6bsREi4q18qnb/BWqu+1juGE6Q=,tag:5u78f+MC90tDDSm8bDxTmA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:G69V/jG3RFl09oFvBAQ+mbq8yf0qVW6jazavMnK0+cO2RGlg,iv:4BemMs4L0QiSSm45h90BWisEtXzzeF647Dz4vrj8YhA=,tag:WLHipXPFDR0aU3jRswkWVg==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:E17t1QFs04U=,iv:C+5eVsBJXk8mfeOcZ8J5K/makH8YDUE2GjcWt61UmOw=,tag:9oEqgOLq7C9dcdRGx0Sikg==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:zTmPp0tzhmRfOZL0zTCprQ==,iv:j8mQPHZY1bnOIqNMHTPYJ8w5zya1RwwjmGT1tf/zAPI=,tag:jxyWITzAB3gFftJUYZra+Q==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:s872hHGt8AlMDHI66QTWldCw6VFFpEZjSKRiw3Iws25NYMsu,iv:ibj4mEy/KPu6sRIWHJeStrRK4Ux3tNgzrrsqxTS39GI=,tag:EnELVi7/naXpocrhEEGbhg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:o3bNvv//BcY=,iv:uWuiXnF0RbWw86QPqiJF3CymOSPm+WZOC6+5dkeGurI=,tag:4Vgrc+MkEUdJw3FDcu+cbw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1l9u8jjefsvmsy4887l79u6wqhzg3dw5q8g8ge8jz8mjlea4fcunsqe8fvg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSR254VmNNZVFBYmJyVjMr
-            MTBmdmNYTWFtRC9VWXBHNitxSkxhbmQrbVM0Cld5V01wYnBqZzJuWitLbWRaM0hN
-            bjhUUnpuZDc4VC9zaXNqTW5MclZFencKLS0tIEx1d2FteHFNeFFzWTl3eGhpckdz
-            NXZNcXlsenIvbHM0NTYvODhxN3JzWUUKswDFxf9y+m3+FpxhS+zCvY6iUQLh+cpN
-            RTxsWHuRlOcGYd/XOco5C/I7Pocx56y9QxKToYS7rBQM4j3PtQ6G8g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVUHpoMTB0TDUxMlI4eXRM
+            UjN2VlNPTVliUVphOXAvbFI4d1N2OEsyTzFrCnZuMW40UVV0QzQxcGJMRkZIVUx5
+            cHVXR09hbkhyNXFuUE5GWkk3N2FkREEKLS0tIExPVE0wQlRlNmdjMno1R1l4OWxH
+            QmcvZmo5dmJyTHlVY2FSa0QyeGppVTQKAHzC0Yvy4kNXlWJdYV1OFrlBI8vJ13gG
+            t1RpDPP4oLsWqg28QsrH55bWlfHoFtzcdyo4LiAJdtMs3KUt64mcwg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-30T16:43:30Z"
-    mac: ENC[AES256_GCM,data:4oC2o54kFjQpXhGjhWsJl3ijlVgwixmWebULjjGeY9MB51geWBXTZPYG1fb6ZFJXheb91oZLOB3tpop0lNTPmQWhR5RlYgE18z0B8bA+5XF8d6TiobYgzURWXA11UgyGV7aLVpoTj004VF6F2hPeGMpaKxb+czRzJ9COSefY2rQ=,iv:tiZTA/2QPXUTOKfuqK6UL1ExDfmu6+V2PzLp+wkHN/Y=,tag:gBDds1SaEGJSiLZ5ypFMUA==,type:str]
+    lastmodified: "2023-10-30T20:34:34Z"
+    mac: ENC[AES256_GCM,data:hfV5LwrbP2tf1KkryEFlr5IwP2VUEXscL5TiLg44N0TZNci4dBO0j7ogixWNFq5Fnld162coRT7qSsKKamJ5o8WseMUUYAhY0r3VToOpwzfWzHRtziUFICmrYoEziVc7zRwpM9goaw2VEnuUNFk7pqW0NX1Ye3LgpB27QJAXsZ4=,iv:fbcgAPbyAk5S9h5LYh8dr6+qmHp6VwP4aTN9+PFrqYE=,tag:vSZZmxSfY0iIAkrMOmf79w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
