--- a/ansible/inventory/host_vars/dnode3.sops.yaml
+++ b/ansible/inventory/host_vars/dnode3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:5Icbn6Kj,iv:umuhowVj8wd6Dp8/QcYICNpHi5HAPj7LDaUva0wStTk=,tag:6ojUhwRWKhGYQewt7Fos9w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:E/BBwFVx,iv:R9tI13nBSQX1J4OENz5CPEkZLZ/bnpvmGVX+1ln7QwA=,tag:AY1iEPtzAy0fOCfbsuVJ4A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age1l9u8jjefsvmsy4887l79u6wqhzg3dw5q8g8ge8jz8mjlea4fcunsqe8fvg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhaWFkdkZCVXZRR2ZPNFlT
-            OExQNml3M1E4eE9ES2hSb2JSR0gvY2g3TTBFCm5sV3hWdWRTNkFoT2JHc3pDcWxV
-            UXVyRnJWVlpJWUFRYkozSS8rOWE3akUKLS0tIGwzaXFJaW51YWtJdEppOTExdllu
-            MG1XeGN5dTNUeS85akU5WTlVUUNXSWsKOGUckFAuaTPvVhbSp46ceywQmrEE+bpu
-            YPkg2dbc6hhZzyVQWlQRlw7BA1sJywHALdJ6hu5BQoA06L8FP4jIlw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBSmUxRWdmcTNLRGg3SEZB
+            NVVxdTFNTHFqN0c3MFc3a3R1SDR2dldMOFUwCkViWUZtM1oyeE9Ya1dydVF3aHI4
+            d1NKUm03NHUvN0h6Sm15NnJmNURnT1kKLS0tIGNnNGh1WFlRR1ZkU2VVbFJXU1Nm
+            a1lXRi9BUjlYdE9TY2hBeitPNWVZVVUK+Kg3vrE1g24lrxXyEhooSMXyjblFDNmj
+            BwRwHSjb59Iq4A9o9FENkouGEe1FTyXGvi3fT9KIM7651+SmM1M5SA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-30T16:42:29Z"
-    mac: ENC[AES256_GCM,data:cuGrwrnTjJEqTcQywBLbtDchKQ4P0VH2rqHZFZD5zEqsC59M9jHi1pE9/t4oPlTy9fZrbLtrTbWdUMiE0YNvlLr7r0jpY9id+e6eo6zueh7Ofa0qLh7OUYSYCSq9GxQpWrPh7HAc/a5mqIEKdtZbXWLl9Ub8rH7VemgmpSUquQo=,iv:zX16peHKiAMLMDFV8G/aQaBNDIVj5/GG+jjGNm04/Js=,tag:gU+5Wwb962n4QpBkLmjxjw==,type:str]
+    lastmodified: "2023-10-30T20:33:23Z"
+    mac: ENC[AES256_GCM,data:FXu0EB1Qc+DyU9+0zC3pBP+6V1iUBVM/ag8csP6xYYiFvN6kF+ZQJUzPLvMuG0PoLX1i5KK/zs7AEO0WLH8GFBOIdxECy+UIQM7IQNGFoNYH2tKYeBmu6pacdiDVuECWnezVF842Y+SwCNoa+iMUb+FVgmTASI76wWO7hzpK/4Q=,iv:sPcsUvjUPBMmlBi0urGSAMUPk3CXhmsluEWMF7nwl6w=,tag:ToUVVKkKPv+D/ZMlgHd1zQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
